use alpine-based jlinked image